--- a/specialties/bachelor/123.html
+++ b/specialties/bachelor/123.html
@@ -103,36 +103,24 @@
               З розвитком інноваційної економіки та ринку інформаційних
               технологій потреба в IT-фахівцях та програмістах невпинно зростає.
               Випускники ОП «Комп’ютерна інженерія»
-              <a target="_blank" href="http://kbpz.kntu.kr.ua/123mag/"
+              <a target="_blank" href="http://kbpz.kntu.kr.ua/123bak/"
                 >дізнатись більше</a
               >
-              готуються для роботи в галузі програмування, розробки та супроводу
-              комп’ютерних програм, а також для проєктування та обслуговування
-              комп’ютерних систем і мереж. Потреба у фахівцях, які вміють
-              ефективно експлуатувати сучасне програмне забезпечення та
-              комп’ютерну техніку, а також кваліфіковано розробляти нові
-              програми, на сьогодні, неухильно зростає. Інтегральна
-              компетентність: здатність розв’язувати складні спеціалізовані
-              задачі та практичні проблеми в галузі комп’ютерної інженерії або у
-              процесі навчання, що передбачає застосування досліджень та/або
-              здійснення інновацій та характеризується невизначеністю умов і
-              вимог. Ступінь магістра передбачає більш глибоке освоєння теорії
-              за обраним профілем, а також підготовку студента до
-              науково-дослідної або педагогічної діяльності за обраним напрямом.
-              Посади, на яких зможуть працювати випускники згідно з ДК 003:2010:
-              професіонали в галузі фізичних, математичних та технічних наук,
-              професіонали в галузі обчислень комп’ютеризації, професіонали в
-              галузі обчислювальних систем, наукові співробітники обчислювальні
-              системи, розробники обчислювальних систем, адміністратор системи,
-              інженер з програмного забезпечення комп’ютерів, професіонали в
-              галузі програмування, наукові співробітники програмування,
-              розробники комп’ютерних програм, інженер-програміст, програміст
-              база даних, програміст прикладний; професіонали в інших галузях
-              обчислень комп’ютеризації, інженер із застосування комп’ютерів,
-              професіонали в інших галузях обчислень, технічні фахівці в галузі
-              обчислювальної техніки, техніки-програмісти, фахівець з
-              інформаційних технологій, фахівець з розробки та тестування
-              програмного забезпечення. й на інших посадах сфери IT
+              зможуть гарантовано працевлаштуватися на таких посадах згідно з
+              Національним класифікатором України: технік із системного
+              адміністрування, технік-програміст, фахівець з інформаційних
+              технологій, фахівець з комп'ютерної графіки (дизайну), фахівець з
+              розробки та тестування програмного забезпечення, фахівець з
+              розроблення комп'ютерних програм, технік із конфігурованої
+              комп'ютерних систем, технік із структурованої кабельної системи,
+              технік інформаційно-обчислювального центру. Також наші випускники
+              успішно працюють WEB-програмістами, WEB-дизайнерами, програмістами
+              мобільних систем, консультантами з ІТ-систем, керівниками
+              ІТ-проєктів, інженер-програмістами, тестувальниками програмного
+              забезпечення (QA-інженерами); прикладними програмістами,
+              системними програмістами, програмістами баз даних, інженерами з
+              комп’ютерних систем, проектувальниками комп’ютерних мереж,
+              системними адміністраторами і на інших посадах сфери IT
               <a target="_blank" href="http://kbpz.kntu.kr.ua/vupysk/"
                 >дізнатись більше</a
               >. Під час навчання за ІТ-спеціальністю “Комп’ютерна інженерія”
@@ -144,22 +132,29 @@
               програмування С/С++, Python, Visual C#, Microsoft DOT NET
               Framework, Java, Android API, HTML, CSS, JavaScript, PHP, MySQL,
               ASP.NET, WordPress, SQL, XML, Interbase, Oracle та ін. Наші
-              студенти опановують проєктування і розробку комп'ютерних мереж,
+              студенти опановують проектування і розробку комп'ютерних мереж,
               управління й адміністрування комп'ютерних мереж. Детально з
               освітньою програмою можна ознайомитися на вебсайті кафедри
               <a target="_blank" href="http://kbpz.kntu.kr.ua/"
                 >дізнатись більше</a
-              >. Магістр може продовжувати освіту за третім освітньо-науковим
-              рівнем вищої освіти чи за програмою магістратури з інших галузей
-              знань, а також підвищувати кваліфікацію та отримувати додаткову
-              післядипломну освіту. Будь айтішним! Вступай на ІТ-спеціальність
-              ЦНТУ
+              >. Після навчання за бакалаврською освітньою програмою наші
+              випускники мають можливість продовжити навчання на магістерській
+              ОП «Комп’ютерна інженерія»
+              <a target="_blank" href="http://kbpz.kntu.kr.ua/123mag/"
+                >дізнатись більше</a
+              >
+              і здобути ступінь магістра з комп’ютерної інженерії. Будь
+              айтішним! Вступай на ІТ-спеціальність ЦНТУ
               <a target="_blank" href="http://kbpz.kntu.kr.ua/infbyk/"
                 >дізнатись більше</a
               >.
             </div>
             <div class="flex__center mt-20">
-              <a href="#" class="custom-btn btn-15 btn--p">Заповнити форму</a>
+              <a
+                href="https://docs.google.com/forms/d/1I7nPhmyyEcD74e3mgKP3KgpULmFiQepVRJuQWSumUh0/edit?usp=sharing"
+                class="custom-btn btn-15 btn--p"
+                >Заповнити форму</a
+              >
             </div>
           </div>
         </div>
