--- a/specialties/master/122.html
+++ b/specialties/master/122.html
@@ -100,21 +100,25 @@
               />
             </div>
             <div class="flex__text">
-              Бакалаври за освітньою програмою “Комп’ютерні науки”
-              <a target="_blank" href="http://kbpz.kntu.kr.ua/122bak-2"
+              Магістри за освітньою програмою “Комп’ютерні науки”
+              <a target="_blank" href="http://kbpz.kntu.kr.ua/122mag/"
                 >дізнатись більше</a
               >
-              готуються для працевлаштування за посадами згідно з Національним
-              класифікатором професій прикладними програмістами, інженерами з
-              програмного забезпечення, адміністраторами баз даних,
-              програмістами (бази даних), адміністраторами даних,
-              інженер-програмістами, адміністраторами доступу, адміністраторами
-              систем, системними програмістами. Наші студенти набувають навичок
-              в моделюванні, проектуванні, розробці та супроводі інформаційних
-              технологій, а також розроблення, впровадження і супроводу
-              інтелектуальних систем аналізу й обробки даних організаційних,
-              технічних, природничих, соціально-економічних систем. Здобувачі
-              вищої освіти за ІТ-спеціальністю “Комп’ютерні науки”
+              готуються для роботи в галузі інформаційної аналітики для усіх
+              видів економічної, політичної та соціальної сфер діяльності,
+              здатних забезпечити генерацію нових знань та інформаційну
+              підтримку прийняття рішень. Поглиблені теоретичні та практичні
+              знання в галузі комп’ютерних наук з акцентом на формування навичок
+              створення та практичної реалізації інновацій в галузі
+              інформаційних технологій для різних галузей людської діяльності.
+              Можливість спеціалізації в напрямках захисту інформаційних
+              технологій. Інтегральна компетентність: здатність розв’язувати
+              складні спеціалізовані задачі та практичні проблеми в галузі
+              комп’ютерних наук або у процесі навчання, що передбачає
+              застосування теорій та методів комп’ютерних наук, інформаційних
+              технологій і характеризується комплексністю та невизначеністю
+              умов. Здобувачі вищої освіти за ІТ-спеціальністю “Комп’ютерні
+              науки”
               <a target="_blank" href="http://kbpz.kntu.kr.ua/pravstyp/"
                 >дізнатись більше</a
               >
@@ -122,17 +126,24 @@
               програмування, серед яких Python, Visual C#, С/С++, Microsoft DOT
               NET, Framework Java, Android API, HTML, CSS, JavaScript, PHP,
               MySQL, ASP.NET, WordPress, DrupalSQL, XML, Paradox, Interbase,
-              Oracle і інші. Наші випускники-бакалаври гарантовано мають
-              можливість вступу й продовження навчання за магістерською ОП
-              «Комп’ютерні науки»
-              <a target="_blank" href="http://kbpz.kntu.kr.ua/122mag/"
+              Oracle і інші. Посади, на яких зможуть працювати випускники згідно
+              з ДК 003:2010: адміністратор бази даних, адміністратор даних,
+              адміністратор доступу, адміністратор системи, аналітик
+              комп’ютерних систем, аналітик операційного та прикладного
+              програмного забезпечення, інженер з програмного забезпечення
+              комп’ютерів, інженер-програміст, програміст (база даних),
+              програміст прикладний, інженер із застосування комп’ютерів. й на
+              інших посадах сфери IT
+              <a target="_blank" href="http://kbpz.kntu.kr.ua/vupysk/"
                 >дізнатись більше</a
-              >
-              та здобути ступінь магістра з комп’ютерних наук. Будь айтішним –
-              вступай на ІТ-спеціальність ЦНТУ
+              >. Магістр може продовжувати освіту за третім (освітньо-науковим)
+              рівнем вищої освіти чи за програмою магістратури з інших галузей
+              знань, а також підвищувати кваліфікацію та отримувати додаткову
+              післядипломну освіту. Будь айтішним! Вступай на ІТ-спеціальність
+              ЦНТУ
               <a target="_blank" href="http://kbpz.kntu.kr.ua/infbyk/"
                 >дізнатись більше</a
-              >
+              >.
             </div>
             <div class="flex__center mt-20">
               <a
