fix bachelor master

--- a/specialties/bachelor/201.html
+++ b/specialties/bachelor/201.html
@@ -100,34 +100,32 @@
               />
             </div>
             <div class="flex__text">
-              Опанування освітньої програми 201-“Агрономія” – прекрасна
-              можливість обійняти модерні посади в усіх без винятку сферах
-              сільського господарства та переробної промисловості. Випускники
-              спеціальності «Агрономія» отримують можливість реалізувати себе на
-              таких посадах: регіональний менеджер-консультант представництв
-              провідних маркетингових вітчизняних та зарубіжних компаній, які
-              діють на аграрному ринку України; менеджер-консультант по
-              забезпеченню насінням, засобами захисту рослин, добривами;
-              викладач ВНЗ; науковець-дослідник у науково-дослідних установах;
-              технолог з виробництва продукції рослинництва; консультант
-              аграрних холдингів; спеціаліст карантинної та насіннєвої служб, з
-              оцінки якості с.-г. продукції; інспекторами митниці; дорадниками,
-              дорадниками-експертами у дорадчих службах; спеціалістами з
-              ландшафтного дизайну; головний агроном господарства, управління;
-              науковий співробітник; агроном-технолог с.-г. підприємств з
-              виробництва і зберігання продукції рослинництва; кредитний та
-              страховий експерт; керівник с.-г. підприємства. В процесі навчання
-              здобувач вищої освіти має можливість поглиблено вивчати англійську
-              і французьку мови; пройти практики та стажування за кордоном у
-              європейських країнах (Франція, Німеччина, Данія, Польща, Англія)
-              та США, а також у передових агропромислових компаніях України;
-              брати участь у міжнародних проектах. При підготовці фахівців в
-              галузі «Агрономія» на кафедрі загального землеробства ЦНТУ освітні
+              Здобувачі вищої освіти перший (бакалаврський) рівень зі
+              спеціальності 201 Агрономія отримують кваліфікацію бакалавр з
+              агрономії, який повністю підготовлений до виконання функціональних
+              професійних, організаційних, управлінських обов'язків на
+              виробництві. Випускники спеціальності «Агрономія» отримують
+              можливість реалізувати себе на таких посадах: регіональний
+              менеджер-консультант представництв провідних маркетингових
+              вітчизняних та зарубіжних компаній, які діють на аграрному ринку
+              України; менеджер-консультант по забезпеченню насінням, засобами
+              захисту рослин, добривами; технолог з виробництва продукції
+              рослинництва; консультант аграрних холдингів; спеціаліст
+              карантинної та насіннєвої служб, з оцінки якості с.-г. продукції;
+              інспекторами митниці; дорадниками, дорадниками-експертами у
+              дорадчих службах; спеціалістами з ландшафтного дизайну; агроном
+              господарства; науковий співробітник; агроном-технолог с.-г.
+              підприємств з виробництва і зберігання продукції рослинництва;
+              кредитний та страховий експерт. В процесі навчання здобувач вищої
+              освіти має можливість поглиблено вивчати англійську і французьку
+              мови; пройти практики та стажування за кордоном у європейських
+              країнах (Франція, Німеччина, Данія, Польща, Англія) та США, а
+              також у передових агропромислових компаніях України; брати участь
+              у міжнародних проектах. При підготовці фахівців в галузі
+              «Агрономія» на кафедрі загального землеробства ЦНТУ освітні
               традиції вміло та якісно поєднують з сучасними технологіями та
               підходами у навчанні, а кваліфікаційні характеристики випускників
-              відповідають новітнім вимогам ринку працевлаштування! Запрошуємо
-              на навчання усіх, хто прагне здобути гарну освіту та відкрити собі
-              шлях до професійного зростання!
+              відповідають новітнім вимогам ринку працевлаштування!
             </div>
             <div class="flex__center mt-20">
               <a
