--- a/specialties/master/071.html
+++ b/specialties/master/071.html
@@ -100,29 +100,32 @@
               />
             </div>
             <div class="flex__text">
-              Спеціальність 071 «Облік і оподаткування» (освітньо-професійна
-              програма «Облік, контроль і оподаткування») - одна з найбільш
-              популярних спеціальностей економічного спрямування в галузі знань
-              07 «Управління та адміністрування». Під час навчання за освітньою
-              програмою «Облік, контроль і оподаткування» здобувачі вивчають
-              бухгалтерський, фінансовий та управлінський облік, статистику та
-              економетрику, економічний аналіз, податкову систему, державний
-              фінансовий контроль, аудит, звітність підприємств, опановують
-              сучасні інформаційні системи в обліку, аудиті та оподаткуванні.
-              Здобуті під час навчання знання дозволять реалізувати себе на
-              посадах: бухгалтера, економіста, менеджера, фінансиста, аудитора,
-              аналітика, податкового едвайзера, податкового консультанта та
-              радника з економічних питань, фахівця з податкового планування та
-              податкового контролю. Випускники працевлаштовуються в комерційних
-              структурах, на підприємствах, в установах, організаціях державного
-              сектора економіки, органах влади та управління, у тому числі в
-              системі державного фінансового контролю, в податкових органах,
-              фінансово-кредитних установах, у сфері фінансово-господарського
-              забезпечення районних та обласних державних адміністрацій. Більш
+              За спеціальністю 071 «Облік і оподаткування» акредитовані освітні
+              програми: «Облік і оподаткування в управлінні підприємницькою
+              діяльністю та державним сектором економіки»; «Адміністрування
+              податків та митних платежів»; та освітньо-наукова програма «Аудит,
+              державний фінансовий контроль та експертиза». Є можливість
+              отримання подвійних дипломів магістра на базі договору про
+              співпрацю із Wyzsza Szkola Gospodarki – Університетом економіки
+              (Bydgoszcz, Poland – м. Бидгощ, Польща). Випускники отримують
+              уміння здійснювати адміністративну та управлінську діяльність з
+              обліку та оподаткування на комерційних підприємствах та установах
+              державного сектору, в системі державного фінансового контролю, в
+              податкових органах, в фінансово-кредитних установах, у сфері
+              фінансово-господарського забезпечення районних та обласних
+              державних адміністрацій, можуть займатися дослідницькою та
+              викладацькою діяльністю. Наявні широкі можливості для
+              працевлаштування та побудови кар’єри на посадах: керівника
+              підприємства (установи, організації), керівного працівника апарату
+              центральних і місцевих органів державної влади та місцевого
+              самоврядування, керівника фінансового, бухгалтерського,
+              економічного, адміністративного підрозділу, головного бухгалтера,
+              головного економіста, менеджера, фінансиста, аудитора, аналітика,
+              податкового консультанта та радника з економічних питань. Більш
               детальну інформацію можна отримати за посиланням:
               <a
                 target="_blank"
-                href="http://audit.kntu.kr.ua/join_the_university/BACHELOR.html"
+                href="http://audit.kntu.kr.ua/join_the_university/MASTER.html"
                 >дізнатися більше.
               </a>
             </div>
